Cleanup localized channel type blurb strings

--- a/locale/en_US/LC_MESSAGES/django.po
+++ b/locale/en_US/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-27 19:46+0000\n"
+"POT-Creation-Date: 2020-10-27 20:13+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -354,38 +354,22 @@ msgstr ""
 msgid "Next Attempt"
 msgstr ""
 
-msgid ""
-"\n"
-"        You can purchase a short code from <a href=\"http://africastalking.com\">Africa's Talking</a>\n"
-"        and connect it in a few simple steps.\n"
-"        "
+msgid "You can purchase a short code from <a href=\"http://africastalking.com\">Africa's Talking</a> and connect it in a few simple steps."
 msgstr ""
 
-msgid ""
-"\n"
-"        To finish configuring your Africa's Talking connection you'll need to set the following callback URLs\n"
-"        on the Africa's Talking website under your account.\n"
-"        "
+msgid "To finish configuring your Africa's Talking connection you'll need to set the following callback URLs on the Africa's Talking website under your account."
 msgstr ""
 
 msgid "Callback URL"
 msgstr ""
 
-msgid ""
-"\n"
-"                You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page,\n"
-"                then clicking on Callback URL.\n"
-"                "
+msgid "You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on Callback URL."
 msgstr ""
 
 msgid "Delivery URL"
 msgstr ""
 
-msgid ""
-"\n"
-"                You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page,\n"
-"                then clicking on Delivery Reports.\n"
-"                "
+msgid "You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on Delivery Reports."
 msgstr ""
 
 msgid "Your short code on Africa's Talking"
@@ -454,17 +438,10 @@ msgstr ""
 msgid "Phone number of this device"
 msgstr ""
 
-msgid ""
-"\n"
-"        If you have an <a href=\"https://www.arabiacell.com/\">ArabiaCell</a> number,\n"
-"        you can quickly connect it using their APIs.\n"
-"        "
+msgid "If you have an <a href=\"https://www.arabiacell.com/\">ArabiaCell</a> number, you can quickly connect it using their APIs."
 msgstr ""
 
-msgid ""
-"\n"
-"        To finish connecting your channel, you need to have ArabiaCell configure the URL below for your shortcode.\n"
-"        "
+msgid "To finish connecting your channel, you need to have ArabiaCell configure the URL below for your shortcode."
 msgstr ""
 
 msgid "Receive URL"
@@ -512,10 +489,7 @@ msgstr ""
 msgid "Easily add a two way number you have configured with <a href=\"http://blackmyna.com\">Blackmyna</a> using their APIs."
 msgstr ""
 
-msgid ""
-"\n"
-"        To finish configuring your Blackmyna connection you'll need to notify Blackmyna of the following URLs.\n"
-"        "
+msgid "To finish configuring your Blackmyna connection you'll need to notify Blackmyna of the following URLs."
 msgstr ""
 
 msgid "Inbound URL"
@@ -530,17 +504,10 @@ msgstr ""
 msgid "This endpoint should be called by Blackmyna when the message status changes. (delivery reports)"
 msgstr ""
 
-msgid ""
-"\n"
-"        If you have an <a href=\"https://www.bongolive.co.tz/\">Bongo Live</a> number,\n"
-"        you can quickly connect it using their APIs.\n"
-"        "
+msgid "If you have an <a href=\"https://www.bongolive.co.tz/\">Bongo Live</a> number, you can quickly connect it using their APIs."
 msgstr ""
 
-msgid ""
-"\n"
-"        To finish connecting your channel, you need to have Bongo Live configure the URLs below for your shortcode.\n"
-"        "
+msgid "To finish connecting your channel, you need to have Bongo Live configure the URLs below for your shortcode."
 msgstr ""
 
 msgid "This URL should be called by Bongo Live when new messages are received or to report DLR status."
@@ -573,17 +540,10 @@ msgstr ""
 msgid "You can connect your BurstSMS number by entering the settings below."
 msgstr ""
 
-msgid ""
-"\n"
-"        If you have a <a href=\"https://www.burstsms.com.au/\">BurstSMS</a> number,\n"
-"        you can quickly connect it using their APIs.\n"
-"        "
+msgid "If you have a <a href=\"https://www.burstsms.com.au/\">BurstSMS</a> number, you can quickly connect it using their APIs."
 msgstr ""
 
-msgid ""
-"\n"
-"        To finish connecting your channel, you need to set your callback URLs below for your number.\n"
-"        "
+msgid "To finish connecting your channel, you need to set your callback URLs below for your number."
 msgstr ""
 
 msgid "This URL should be called by BurstSMS when new messages are received.You must set this for your number under the 'Inbound Settings' options.Select 'Yes' to the 'Forward to URL' option and enter this URL."
@@ -601,15 +561,10 @@ msgstr ""
 msgid "This URL should be called by BurstSMS when messages are replied to.You can set it on your settings page."
 msgstr ""
 
-msgid ""
-"If you are based in the Phillipines, you can integrate with Chikka to send\n"
-"                       and receive messages on your shortcode."
+msgid "If you are based in the Phillipines, you can integrate with Chikka to send and receive messages on your shortcode."
 msgstr ""
 
-msgid ""
-"\n"
-"        To finish configuring your Chikka connection you need to set the following URLs in your Chikka account API settings.\n"
-"        "
+msgid "To finish configuring your Chikka connection you need to set the following URLs in your Chikka account API settings."
 msgstr ""
 
 msgid "Notification Receiver URL"
@@ -636,36 +591,22 @@ msgstr ""
 msgid "The Secret Key found on your Chikka API credentials page"
 msgstr ""
 
-msgid ""
-"Connect your <a href=\"http://clickatell.com/\">Clickatell</a> number, we'll walk you\n"
-"                           through the steps necessary to get your Clickatell connection working in a few minutes."
+msgid "Connect your <a href=\"http://clickatell.com/\">Clickatell</a> number, we'll walk you through the steps necessary to get your Clickatell connection working in a few minutes."
 msgstr ""
 
-msgid ""
-"\n"
-"        To finish configuring your Clickatell connection you'll need to set the following callback URLs on the\n"
-"        Clickatell website for your integration.\n"
-"        "
+msgid "To finish configuring your Clickatell connection you'll need to set the following callback URLs on the Clickatell website for your integration."
 msgstr ""
 
 msgid "Reply Callback"
 msgstr ""
 
-msgid ""
-"\n"
-"                You can set the callback URL on your Clickatell account by managing your integration, then setting your reply\n"
-"                callback under \"Two Way Settings\" to HTTP POST and your target address to the URL below. (leave username and password blank)\n"
-"                "
+msgid "You can set the callback URL on your Clickatell account by managing your integration, then setting your reply callback under \"Two Way Settings\" to HTTP POST and your target address to the URL below. (leave username and password blank)"
 msgstr ""
 
 msgid "Delivery Notifications"
 msgstr ""
 
-msgid ""
-"\n"
-"                You can set the delivery notification URL on your Clickatell account by managing your integration, then setting your\n"
-"                delivery notification URL under \"Settings\" to HTTP POST and your target address to the URL below. (leave username and password blank)\n"
-"                "
+msgid "You can set the delivery notification URL on your Clickatell account by managing your integration, then setting your delivery notification URL under \"Settings\" to HTTP POST and your target address to the URL below. (leave username and password blank)"
 msgstr ""
 
 msgid "The phone number with country code or short code you are connecting. ex: +250788123124 or 15543"
@@ -726,61 +667,37 @@ msgstr ""
 msgid "You can connect your ClickSend number by entering the settings below."
 msgstr ""
 
-msgid ""
-"\n"
-"        If you have a <a href=\"https://www.clicksend.com/\">ClickSend</a> number,\n"
-"        you can quickly connect it using their APIs.\n"
-"        "
+msgid "If you have a <a href=\"https://www.clicksend.com/\">ClickSend</a> number, you can quickly connect it using their APIs."
 msgstr ""
 
-msgid ""
-"\n"
-"        To finish connecting your channel, you need to set your inbound SMS URL below for your number.\n"
-"        "
+msgid "To finish connecting your channel, you need to set your inbound SMS URL below for your number."
 msgstr ""
 
-msgid "This URL should be called by ClickSend when new messages are received.On your ClickSend dashboard, you can set this URL by going to SMS, then Settings, then the Inbound SMS Settings menu.Add a new rule, select action URL, and use the URL above, then click save."
+msgid "This URL should be called by ClickSend when new messages are received. On your ClickSend dashboard, you can set this URL by going to SMS, then Settings, then the Inbound SMS Settings menu. Add a new rule, select action URL, and use the URL above, then click save."
 msgstr ""
 
 msgid "Easily add a two way number you have configured with <a href=\"http://dartmedia.biz/\">Dart Media</a> in Indonesia."
 msgstr ""
 
-msgid ""
-"\n"
-"        To finish configuring your Dart Media connection you'll need to provide them with the following details.\n"
-"        "
+msgid "To finish configuring your Dart Media connection you'll need to provide them with the following details."
 msgstr ""
 
 msgid "Received URL"
 msgstr ""
 
-msgid ""
-"\n"
-"                This endpoint should be called by Dart Media when new messages are received to your number.\n"
-"                You can set the receive URL on your Dart Media account by contacting your sales agent.\n"
-"                "
+msgid "This endpoint should be called by Dart Media when new messages are received to your number. You can set the receive URL on your Dart Media account by contacting your sales agent."
 msgstr ""
 
 msgid "Delivered URL"
 msgstr ""
 
-msgid ""
-"\n"
-"                This endpoint should be called by Dart Media when a message has been to the final recipient. (delivery reports)\n"
-"                You can set the delivery callback URL on your Dart Media account by contacting your sales agent.\n"
-"                "
+msgid "This endpoint should be called by Dart Media when a message has been to the final recipient. (delivery reports) You can set the delivery callback URL on your Dart Media account by contacting your sales agent."
 msgstr ""
 
-msgid ""
-"If you are based in Uganda or DRC you can purchase a short\n"
-"    code from <a href=\"http://dmarkmobile.com/\">DMark Mobile</a> and connect it\n"
-"    in a few simple steps."
+msgid "If you are based in Uganda or DRC you can purchase a short code from <a href=\"http://dmarkmobile.com/\">DMark Mobile</a> and connect it in a few simple steps."
 msgstr ""
 
-msgid ""
-"\n"
-"        To finish configuring your DMark channel you need to set DMark to send MO messages to the URL below.\n"
-"        "
+msgid "To finish configuring your DMark channel you need to set DMark to send MO messages to the URL below."
 msgstr ""
 
 msgid "Your short code on DMark Mobile"
