--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-27 19:46+0000\n"
+"POT-Creation-Date: 2020-10-27 20:13+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -423,11 +423,7 @@ msgid "Next Attempt"
 msgstr "Próximo intento"
 
 #, fuzzy
-msgid ""
-"\n"
-"        You can purchase a short code from <a href=\"http://africastalking.com\">Africa's Talking</a>\n"
-"        and connect it in a few simple steps.\n"
-"        "
+msgid "You can purchase a short code from <a href=\"http://africastalking.com\">Africa's Talking</a> and connect it in a few simple steps."
 msgstr ""
 "\n"
 "                  Si vive en Kenia, puede comprar un código abreviado\n"
@@ -443,11 +439,7 @@ msgstr ""
 #| "        Africa's Talking website under your account.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"        To finish configuring your Africa's Talking connection you'll need to set the following callback URLs\n"
-"        on the Africa's Talking website under your account.\n"
-"        "
+msgid "To finish configuring your Africa's Talking connection you'll need to set the following callback URLs on the Africa's Talking website under your account."
 msgstr ""
 "\n"
 "        Para terminar de configurar su conexión a Africa's Talking tendrá que configurar los siguientes URLs de devolución de llamadas en el\n"
@@ -459,45 +451,17 @@ msgid "Callback URL"
 msgstr "URL de devolución de llamadas"
 
 #, fuzzy
-#| msgid ""
-#| "\n"
-#| "        You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on\n"
-#| "        <a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\">Callback URL</a>.\n"
-#| "\n"
-#| "      "
-msgid ""
-"\n"
-"                You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page,\n"
-"                then clicking on Callback URL.\n"
-"                "
-msgstr ""
-"\n"
-"        Puede configurar el URL de devolución de llamadas en su cuenta de Africa's Talking visitando la página de Panel de mensajería y haciendo clic en\n"
-"        <a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\">Callback URL</a>.\n"
-"\n"
-"      "
+#| msgid "You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on"
+msgid "You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on Callback URL."
+msgstr "Puede establecer el URL de entrega en su cuenta de Africa's Talking vistando la página del panel de mensajería y haciendo clic en"
 
 msgid "Delivery URL"
 msgstr "URL de entrega"
 
 #, fuzzy
-#| msgid ""
-#| "\n"
-#| "        You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on\n"
-#| "        <a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\">Callback URL</a>.\n"
-#| "\n"
-#| "      "
-msgid ""
-"\n"
-"                You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page,\n"
-"                then clicking on Delivery Reports.\n"
-"                "
-msgstr ""
-"\n"
-"        Puede configurar el URL de devolución de llamadas en su cuenta de Africa's Talking visitando la página de Panel de mensajería y haciendo clic en\n"
-"        <a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\">Callback URL</a>.\n"
-"\n"
-"      "
+#| msgid "You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on"
+msgid "You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on Delivery Reports."
+msgstr "Puede establecer el URL de entrega en su cuenta de Africa's Talking vistando la página del panel de mensajería y haciendo clic en"
 
 msgid "Your short code on Africa's Talking"
 msgstr "Su código abreviado en Africa's Talking"
@@ -570,18 +534,11 @@ msgstr "Conectar su teléfono Android"
 msgid "Phone number of this device"
 msgstr "El número de teléfono para esta llamada"
 
-msgid ""
-"\n"
-"        If you have an <a href=\"https://www.arabiacell.com/\">ArabiaCell</a> number,\n"
-"        you can quickly connect it using their APIs.\n"
-"        "
+msgid "If you have an <a href=\"https://www.arabiacell.com/\">ArabiaCell</a> number, you can quickly connect it using their APIs."
 msgstr ""
 
 #, fuzzy
-msgid ""
-"\n"
-"        To finish connecting your channel, you need to have ArabiaCell configure the URL below for your shortcode.\n"
-"        "
+msgid "To finish connecting your channel, you need to have ArabiaCell configure the URL below for your shortcode."
 msgstr ""
 "\n"
 "        Para terminar de configurar su conexión Vumi, tendrá que establecer los siguientes parámetros en su conversación Vumi:\n"
@@ -675,10 +632,7 @@ msgstr ""
 #| "        To finish configuring your Vumi connection you'll need to set the following parameters on your Vumi conversation:\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"        To finish configuring your Blackmyna connection you'll need to notify Blackmyna of the following URLs.\n"
-"        "
+msgid "To finish configuring your Blackmyna connection you'll need to notify Blackmyna of the following URLs."
 msgstr ""
 "\n"
 "        Para terminar de configurar su conexión Vumi, tendrá que establecer los siguientes parámetros en su conversación Vumi:\n"
@@ -719,18 +673,11 @@ msgstr ""
 "\n"
 "      "
 
-msgid ""
-"\n"
-"        If you have an <a href=\"https://www.bongolive.co.tz/\">Bongo Live</a> number,\n"
-"        you can quickly connect it using their APIs.\n"
-"        "
+msgid "If you have an <a href=\"https://www.bongolive.co.tz/\">Bongo Live</a> number, you can quickly connect it using their APIs."
 msgstr ""
 
 #, fuzzy
-msgid ""
-"\n"
-"        To finish connecting your channel, you need to have Bongo Live configure the URLs below for your shortcode.\n"
-"        "
+msgid "To finish connecting your channel, you need to have Bongo Live configure the URLs below for your shortcode."
 msgstr ""
 "\n"
 "        Para terminar de configurar su conexión Vumi, tendrá que establecer los siguientes parámetros en su conversación Vumi:\n"
@@ -798,18 +745,18 @@ msgstr ""
 "\n"
 "      "
 
-msgid ""
-"\n"
-"        If you have a <a href=\"https://www.burstsms.com.au/\">BurstSMS</a> number,\n"
-"        you can quickly connect it using their APIs.\n"
-"        "
+#, fuzzy
+msgid "If you have a <a href=\"https://www.burstsms.com.au/\">BurstSMS</a> number, you can quickly connect it using their APIs."
 msgstr ""
+"\n"
+"                  Si vive en Kenia, puede comprar un código abreviado\n"
+"                  de %(link_start)sAfrica's Talking%(link_end)s y conectarlo a TextIt\n"
+"                  con solo unos simples pasos.\n"
+"\n"
+"                "
 
 #, fuzzy
-msgid ""
-"\n"
-"        To finish connecting your channel, you need to set your callback URLs below for your number.\n"
-"        "
+msgid "To finish connecting your channel, you need to set your callback URLs below for your number."
 msgstr ""
 "\n"
 "        Para terminar de configurar su conexión Vumi, tendrá que establecer los siguientes parámetros en su conversación Vumi:\n"
@@ -846,9 +793,7 @@ msgstr ""
 "      "
 
 #, fuzzy
-msgid ""
-"If you are based in the Phillipines, you can integrate with Chikka to send\n"
-"                       and receive messages on your shortcode."
+msgid "If you are based in the Phillipines, you can integrate with Chikka to send and receive messages on your shortcode."
 msgstr ""
 "\n"
 "                  Agregar instantáneamente un número de teléfono especial en el código de área de su\n"
@@ -861,10 +806,7 @@ msgstr ""
 #| "        To finish configuring your Vumi connection you'll need to set the following parameters on your Vumi conversation:\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"        To finish configuring your Chikka connection you need to set the following URLs in your Chikka account API settings.\n"
-"        "
+msgid "To finish configuring your Chikka connection you need to set the following URLs in your Chikka account API settings."
 msgstr ""
 "\n"
 "        Para terminar de configurar su conexión Vumi, tendrá que establecer los siguientes parámetros en su conversación Vumi:\n"
@@ -904,9 +846,7 @@ msgstr ""
 
 #, fuzzy
 #| msgid "Connect your Kannel instance, we'll walk you through the steps necessary to get your SMSC connection working in a few minutes."
-msgid ""
-"Connect your <a href=\"http://clickatell.com/\">Clickatell</a> number, we'll walk you\n"
-"                           through the steps necessary to get your Clickatell connection working in a few minutes."
+msgid "Connect your <a href=\"http://clickatell.com/\">Clickatell</a> number, we'll walk you through the steps necessary to get your Clickatell connection working in a few minutes."
 msgstr "Conecte su caso Kannel, lo orientaremos para que siga los pasos necesarios para que su conexión SMSC funcione en cuestión de minutos."
 
 #, fuzzy
@@ -916,11 +856,7 @@ msgstr "Conecte su caso Kannel, lo orientaremos para que siga los pasos necesari
 #| "        Africa's Talking website under your account.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"        To finish configuring your Clickatell connection you'll need to set the following callback URLs on the\n"
-"        Clickatell website for your integration.\n"
-"        "
+msgid "To finish configuring your Clickatell connection you'll need to set the following callback URLs on the Clickatell website for your integration."
 msgstr ""
 "\n"
 "        Para terminar de configurar su conexión a Africa's Talking tendrá que configurar los siguientes URLs de devolución de llamadas en el\n"
@@ -933,11 +869,7 @@ msgstr ""
 msgid "Reply Callback"
 msgstr "URL de devolución de llamadas"
 
-msgid ""
-"\n"
-"                You can set the callback URL on your Clickatell account by managing your integration, then setting your reply\n"
-"                callback under \"Two Way Settings\" to HTTP POST and your target address to the URL below. (leave username and password blank)\n"
-"                "
+msgid "You can set the callback URL on your Clickatell account by managing your integration, then setting your reply callback under \"Two Way Settings\" to HTTP POST and your target address to the URL below. (leave username and password blank)"
 msgstr ""
 
 #, fuzzy
@@ -945,11 +877,7 @@ msgstr ""
 msgid "Delivery Notifications"
 msgstr "Notificaciones de correo electrónico"
 
-msgid ""
-"\n"
-"                You can set the delivery notification URL on your Clickatell account by managing your integration, then setting your\n"
-"                delivery notification URL under \"Settings\" to HTTP POST and your target address to the URL below. (leave username and password blank)\n"
-"                "
+msgid "You can set the delivery notification URL on your Clickatell account by managing your integration, then setting your delivery notification URL under \"Settings\" to HTTP POST and your target address to the URL below. (leave username and password blank)"
 msgstr ""
 
 msgid "The phone number with country code or short code you are connecting. ex: +250788123124 or 15543"
@@ -1058,25 +986,25 @@ msgstr ""
 "\n"
 "      "
 
-msgid ""
-"\n"
-"        If you have a <a href=\"https://www.clicksend.com/\">ClickSend</a> number,\n"
-"        you can quickly connect it using their APIs.\n"
-"        "
+#, fuzzy
+msgid "If you have a <a href=\"https://www.clicksend.com/\">ClickSend</a> number, you can quickly connect it using their APIs."
 msgstr ""
+"\n"
+"                  Si vive en Kenia, puede comprar un código abreviado\n"
+"                  de %(link_start)sAfrica's Talking%(link_end)s y conectarlo a TextIt\n"
+"                  con solo unos simples pasos.\n"
+"\n"
+"                "
 
 #, fuzzy
-msgid ""
-"\n"
-"        To finish connecting your channel, you need to set your inbound SMS URL below for your number.\n"
-"        "
+msgid "To finish connecting your channel, you need to set your inbound SMS URL below for your number."
 msgstr ""
 "\n"
 "        Para terminar de configurar su conexión Vumi, tendrá que establecer los siguientes parámetros en su conversación Vumi:\n"
 "\n"
 "      "
 
-msgid "This URL should be called by ClickSend when new messages are received.On your ClickSend dashboard, you can set this URL by going to SMS, then Settings, then the Inbound SMS Settings menu.Add a new rule, select action URL, and use the URL above, then click save."
+msgid "This URL should be called by ClickSend when new messages are received. On your ClickSend dashboard, you can set this URL by going to SMS, then Settings, then the Inbound SMS Settings menu. Add a new rule, select action URL, and use the URL above, then click save."
 msgstr ""
 
 #, fuzzy
@@ -1098,10 +1026,7 @@ msgstr ""
 #| "        To finish configuring your Vumi connection you'll need to set the following parameters on your Vumi conversation:\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"        To finish configuring your Dart Media connection you'll need to provide them with the following details.\n"
-"        "
+msgid "To finish configuring your Dart Media connection you'll need to provide them with the following details."
 msgstr ""
 "\n"
 "        Para terminar de configurar su conexión Vumi, tendrá que establecer los siguientes parámetros en su conversación Vumi:\n"
@@ -1117,11 +1042,7 @@ msgstr "URL recibido"
 #| "        This endpoint should be called by Infobip when new messages are received to your number. You can set the receive URL on your Infobip account by contacting your sales agent.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"                This endpoint should be called by Dart Media when new messages are received to your number.\n"
-"                You can set the receive URL on your Dart Media account by contacting your sales agent.\n"
-"                "
+msgid "This endpoint should be called by Dart Media when new messages are received to your number. You can set the receive URL on your Dart Media account by contacting your sales agent."
 msgstr ""
 "\n"
 "        Infobip deberá llamar a este endpoint cuando su número reciba nuevos mensajes. Puede contactar a su agente de ventas para establecer el URL para recibir en su cuenta Infobip.\n"
@@ -1138,11 +1059,7 @@ msgstr "URL entregado"
 #| "        You can set the delivery callback URL on your Infobip account by contacting your sales agent.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"                This endpoint should be called by Dart Media when a message has been to the final recipient. (delivery reports)\n"
-"                You can set the delivery callback URL on your Dart Media account by contacting your sales agent.\n"
-"                "
+msgid "This endpoint should be called by Dart Media when a message has been to the final recipient. (delivery reports) You can set the delivery callback URL on your Dart Media account by contacting your sales agent."
 msgstr ""
 "\n"
 "        Hub9 llamará a este endpoint cuando el mensaje haya llegado al destinatario final. (informes de entrega)\n"
@@ -1151,10 +1068,7 @@ msgstr ""
 "      "
 
 #, fuzzy
-msgid ""
-"If you are based in Uganda or DRC you can purchase a short\n"
-"    code from <a href=\"http://dmarkmobile.com/\">DMark Mobile</a> and connect it\n"
-"    in a few simple steps."
+msgid "If you are based in Uganda or DRC you can purchase a short code from <a href=\"http://dmarkmobile.com/\">DMark Mobile</a> and connect it in a few simple steps."
 msgstr ""
 "\n"
 "                  Si vive en Kenia, puede comprar un código abreviado\n"
@@ -1169,10 +1083,7 @@ msgstr ""
 #| "        To finish configuring your Vumi connection you'll need to set the following parameters on your Vumi conversation:\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"        To finish configuring your DMark channel you need to set DMark to send MO messages to the URL below.\n"
-"        "
+msgid "To finish configuring your DMark channel you need to set DMark to send MO messages to the URL below."
 msgstr ""
 "\n"
 "        Para terminar de configurar su conexión Vumi, tendrá que establecer los siguientes parámetros en su conversación Vumi:\n"
@@ -11943,6 +11854,44 @@ msgstr "Ingrese el código de pedido"
 msgid "Found ${count} for ${query}"
 msgstr ""
 
+#, fuzzy
+#~| msgid ""
+#~| "\n"
+#~| "        You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on\n"
+#~| "        <a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\">Callback URL</a>.\n"
+#~| "\n"
+#~| "      "
+#~ msgid ""
+#~ "\n"
+#~ "                You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page,\n"
+#~ "                then clicking on Callback URL.\n"
+#~ "                "
+#~ msgstr ""
+#~ "\n"
+#~ "        Puede configurar el URL de devolución de llamadas en su cuenta de Africa's Talking visitando la página de Panel de mensajería y haciendo clic en\n"
+#~ "        <a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\">Callback URL</a>.\n"
+#~ "\n"
+#~ "      "
+
+#, fuzzy
+#~| msgid ""
+#~| "\n"
+#~| "        You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on\n"
+#~| "        <a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\">Callback URL</a>.\n"
+#~| "\n"
+#~| "      "
+#~ msgid ""
+#~ "\n"
+#~ "                You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page,\n"
+#~ "                then clicking on Delivery Reports.\n"
+#~ "                "
+#~ msgstr ""
+#~ "\n"
+#~ "        Puede configurar el URL de devolución de llamadas en su cuenta de Africa's Talking visitando la página de Panel de mensajería y haciendo clic en\n"
+#~ "        <a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\">Callback URL</a>.\n"
+#~ "\n"
+#~ "      "
+
 #~ msgid "No org for this user, cannot claim"
 #~ msgstr "No hay organización para este usuario, no puede pedir"
 
@@ -15671,9 +15620,6 @@ msgstr ""
 
 #~ msgid "Username:"
 #~ msgstr "Nombre de usuario:"
-
-#~ msgid "You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on"
-#~ msgstr "Puede establecer el URL de entrega en su cuenta de Africa's Talking vistando la página del panel de mensajería y haciendo clic en"
 
 #, fuzzy
 #~| msgid "Callback URL"
