--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-27 19:46+0000\n"
+"POT-Creation-Date: 2020-10-27 20:13+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -429,11 +429,7 @@ msgid "Next Attempt"
 msgstr "Próxima tentativa"
 
 #, fuzzy
-msgid ""
-"\n"
-"        You can purchase a short code from <a href=\"http://africastalking.com\">Africa's Talking</a>\n"
-"        and connect it in a few simple steps.\n"
-"        "
+msgid "You can purchase a short code from <a href=\"http://africastalking.com\">Africa's Talking</a> and connect it in a few simple steps."
 msgstr ""
 "\n"
 "Se sua base estiver no Quênia, você pode comprar um número curto da %(link_start)s Africa's Talking %(link_end)s e\n"
@@ -446,11 +442,7 @@ msgstr ""
 #| "        Africa's Talking website under your account.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"        To finish configuring your Africa's Talking connection you'll need to set the following callback URLs\n"
-"        on the Africa's Talking website under your account.\n"
-"        "
+msgid "To finish configuring your Africa's Talking connection you'll need to set the following callback URLs on the Africa's Talking website under your account."
 msgstr ""
 "\n"
 "Para finalizar a configuração de sua conexão com Africa's Talking, você precisará definir as URLs de retorno de chamada a seguir, utilizando a sua conta no site do Africa's Talking."
@@ -459,41 +451,17 @@ msgid "Callback URL"
 msgstr "URL de Retorno de Chamada"
 
 #, fuzzy
-#| msgid ""
-#| "\n"
-#| "        You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on\n"
-#| "        <a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\">Callback URL</a>.\n"
-#| "\n"
-#| "      "
-msgid ""
-"\n"
-"                You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page,\n"
-"                then clicking on Callback URL.\n"
-"                "
-msgstr ""
-"\n"
-"Você pode definir a URL de retorno de chamada em sua conta Africa's Talking, visitando a página do Painel de SMS e em seguida, clicando em \n"
-"<a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\"> Callback URL </ a>. "
+#| msgid "You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on"
+msgid "You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on Callback URL."
+msgstr "Você pode definir a URL de entrega para a sua conta da Africa's Talking, visitando a página Painel de SMS, em seguida, clicando em"
 
 msgid "Delivery URL"
 msgstr "URL de entrega"
 
 #, fuzzy
-#| msgid ""
-#| "\n"
-#| "        You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on\n"
-#| "        <a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\">Callback URL</a>.\n"
-#| "\n"
-#| "      "
-msgid ""
-"\n"
-"                You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page,\n"
-"                then clicking on Delivery Reports.\n"
-"                "
-msgstr ""
-"\n"
-"Você pode definir a URL de retorno de chamada em sua conta Africa's Talking, visitando a página do Painel de SMS e em seguida, clicando em \n"
-"<a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\"> Callback URL </ a>. "
+#| msgid "You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on"
+msgid "You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on Delivery Reports."
+msgstr "Você pode definir a URL de entrega para a sua conta da Africa's Talking, visitando a página Painel de SMS, em seguida, clicando em"
 
 msgid "Your short code on Africa's Talking"
 msgstr "O seu número curto do Africa's Talking"
@@ -566,18 +534,11 @@ msgstr "Conecte seu telefone Android"
 msgid "Phone number of this device"
 msgstr "O número de telefone para esta chamada"
 
-msgid ""
-"\n"
-"        If you have an <a href=\"https://www.arabiacell.com/\">ArabiaCell</a> number,\n"
-"        you can quickly connect it using their APIs.\n"
-"        "
+msgid "If you have an <a href=\"https://www.arabiacell.com/\">ArabiaCell</a> number, you can quickly connect it using their APIs."
 msgstr ""
 
 #, fuzzy
-msgid ""
-"\n"
-"        To finish connecting your channel, you need to have ArabiaCell configure the URL below for your shortcode.\n"
-"        "
+msgid "To finish connecting your channel, you need to have ArabiaCell configure the URL below for your shortcode."
 msgstr ""
 "\n"
 "Para finalizar a configuração de sua conexão você precisa definir as seguintes URLs de retorno de chamada em seu serviço ou serviço do agregador. "
@@ -660,10 +621,7 @@ msgstr ""
 #| "        To finish configuring your Hub9 connection you'll need to provide them with the following details.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"        To finish configuring your Blackmyna connection you'll need to notify Blackmyna of the following URLs.\n"
-"        "
+msgid "To finish configuring your Blackmyna connection you'll need to notify Blackmyna of the following URLs."
 msgstr ""
 "\n"
 "Para finalizar a configuração da sua conexão com o Hub9, você terá que fornece-los com os seguintes detalhes."
@@ -688,18 +646,11 @@ msgstr ""
 "\n"
 "Esse terminal deve ser chamado pelo Hub9 quando o seu número receber novas mensagens. Você pode definir a URL de recebimento na sua conta do Hub9 contatando o seu agente de vendas"
 
-msgid ""
-"\n"
-"        If you have an <a href=\"https://www.bongolive.co.tz/\">Bongo Live</a> number,\n"
-"        you can quickly connect it using their APIs.\n"
-"        "
+msgid "If you have an <a href=\"https://www.bongolive.co.tz/\">Bongo Live</a> number, you can quickly connect it using their APIs."
 msgstr ""
 
 #, fuzzy
-msgid ""
-"\n"
-"        To finish connecting your channel, you need to have Bongo Live configure the URLs below for your shortcode.\n"
-"        "
+msgid "To finish connecting your channel, you need to have Bongo Live configure the URLs below for your shortcode."
 msgstr ""
 "\n"
 "Para finalizar a configuração de sua conexão você precisa definir as seguintes URLs de retorno de chamada em seu serviço ou serviço do agregador. "
@@ -755,18 +706,15 @@ msgstr ""
 "\n"
 "Você pode conectar seu número <a href=\"http://infobip.com\">Infobip</a> inserindo aqui o seu número, nome de usuário e senha."
 
-msgid ""
-"\n"
-"        If you have a <a href=\"https://www.burstsms.com.au/\">BurstSMS</a> number,\n"
-"        you can quickly connect it using their APIs.\n"
-"        "
+#, fuzzy
+msgid "If you have a <a href=\"https://www.burstsms.com.au/\">BurstSMS</a> number, you can quickly connect it using their APIs."
 msgstr ""
+"\n"
+"Se sua base estiver no Quênia, você pode comprar um número curto da %(link_start)s Africa's Talking %(link_end)s e\n"
+"conectá-lo ao Textit em poucos e simples passos."
 
 #, fuzzy
-msgid ""
-"\n"
-"        To finish connecting your channel, you need to set your callback URLs below for your number.\n"
-"        "
+msgid "To finish connecting your channel, you need to set your callback URLs below for your number."
 msgstr ""
 "\n"
 "Para finalizar a configuração de sua conexão você precisa definir as seguintes URLs de retorno de chamada em seu serviço ou serviço do agregador. "
@@ -794,18 +742,13 @@ msgstr ""
 "Esse terminal deve ser chamado pelo Hub9 quando o seu número receber novas mensagens. Você pode definir a URL de recebimento na sua conta do Hub9 contatando o seu agente de vendas"
 
 #, fuzzy
-msgid ""
-"If you are based in the Phillipines, you can integrate with Chikka to send\n"
-"                       and receive messages on your shortcode."
+msgid "If you are based in the Phillipines, you can integrate with Chikka to send and receive messages on your shortcode."
 msgstr ""
 "\n"
 "Adicione instantaneamente um número de telefone dedicado dentro do código de área de sua escolha a partir de sua conexão"
 
 #, fuzzy
-msgid ""
-"\n"
-"        To finish configuring your Chikka connection you need to set the following URLs in your Chikka account API settings.\n"
-"        "
+msgid "To finish configuring your Chikka connection you need to set the following URLs in your Chikka account API settings."
 msgstr ""
 "\n"
 "Para finalizar a configuração de sua conexão você precisa definir as seguintes URLs de retorno de chamada em seu serviço ou serviço do agregador. "
@@ -841,9 +784,7 @@ msgstr "Segredo"
 msgid "The Secret Key found on your Chikka API credentials page"
 msgstr ""
 
-msgid ""
-"Connect your <a href=\"http://clickatell.com/\">Clickatell</a> number, we'll walk you\n"
-"                           through the steps necessary to get your Clickatell connection working in a few minutes."
+msgid "Connect your <a href=\"http://clickatell.com/\">Clickatell</a> number, we'll walk you through the steps necessary to get your Clickatell connection working in a few minutes."
 msgstr ""
 
 #, fuzzy
@@ -853,11 +794,7 @@ msgstr ""
 #| "        Infobip website under your account.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"        To finish configuring your Clickatell connection you'll need to set the following callback URLs on the\n"
-"        Clickatell website for your integration.\n"
-"        "
+msgid "To finish configuring your Clickatell connection you'll need to set the following callback URLs on the Clickatell website for your integration."
 msgstr ""
 "\n"
 "Para finalizar a configuração da sua conexão Infobip, você precisará definir as URLs de retorno de chamada a seguir, utilizando a sua conta no site do Infobip."
@@ -867,11 +804,7 @@ msgstr ""
 msgid "Reply Callback"
 msgstr "URL de Retorno de Chamada"
 
-msgid ""
-"\n"
-"                You can set the callback URL on your Clickatell account by managing your integration, then setting your reply\n"
-"                callback under \"Two Way Settings\" to HTTP POST and your target address to the URL below. (leave username and password blank)\n"
-"                "
+msgid "You can set the callback URL on your Clickatell account by managing your integration, then setting your reply callback under \"Two Way Settings\" to HTTP POST and your target address to the URL below. (leave username and password blank)"
 msgstr ""
 
 #, fuzzy
@@ -879,11 +812,7 @@ msgstr ""
 msgid "Delivery Notifications"
 msgstr "Notificações de e-mail"
 
-msgid ""
-"\n"
-"                You can set the delivery notification URL on your Clickatell account by managing your integration, then setting your\n"
-"                delivery notification URL under \"Settings\" to HTTP POST and your target address to the URL below. (leave username and password blank)\n"
-"                "
+msgid "You can set the delivery notification URL on your Clickatell account by managing your integration, then setting your delivery notification URL under \"Settings\" to HTTP POST and your target address to the URL below. (leave username and password blank)"
 msgstr ""
 
 #, fuzzy
@@ -985,23 +914,20 @@ msgstr ""
 "\n"
 "Você pode conectar seu número <a href=\"http://infobip.com\">Infobip</a> inserindo aqui o seu número, nome de usuário e senha."
 
-msgid ""
-"\n"
-"        If you have a <a href=\"https://www.clicksend.com/\">ClickSend</a> number,\n"
-"        you can quickly connect it using their APIs.\n"
-"        "
+#, fuzzy
+msgid "If you have a <a href=\"https://www.clicksend.com/\">ClickSend</a> number, you can quickly connect it using their APIs."
 msgstr ""
+"\n"
+"Se sua base estiver no Quênia, você pode comprar um número curto da %(link_start)s Africa's Talking %(link_end)s e\n"
+"conectá-lo ao Textit em poucos e simples passos."
 
 #, fuzzy
-msgid ""
-"\n"
-"        To finish connecting your channel, you need to set your inbound SMS URL below for your number.\n"
-"        "
+msgid "To finish connecting your channel, you need to set your inbound SMS URL below for your number."
 msgstr ""
 "\n"
 "Para finalizar a configuração de sua conexão você precisa definir as seguintes URLs de retorno de chamada em seu serviço ou serviço do agregador. "
 
-msgid "This URL should be called by ClickSend when new messages are received.On your ClickSend dashboard, you can set this URL by going to SMS, then Settings, then the Inbound SMS Settings menu.Add a new rule, select action URL, and use the URL above, then click save."
+msgid "This URL should be called by ClickSend when new messages are received. On your ClickSend dashboard, you can set this URL by going to SMS, then Settings, then the Inbound SMS Settings menu. Add a new rule, select action URL, and use the URL above, then click save."
 msgstr ""
 
 #, fuzzy
@@ -1021,10 +947,7 @@ msgstr ""
 #| "        To finish configuring your Hub9 connection you'll need to provide them with the following details.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"        To finish configuring your Dart Media connection you'll need to provide them with the following details.\n"
-"        "
+msgid "To finish configuring your Dart Media connection you'll need to provide them with the following details."
 msgstr ""
 "\n"
 "Para finalizar a configuração da sua conexão com o Hub9, você terá que fornece-los com os seguintes detalhes."
@@ -1038,11 +961,7 @@ msgstr "URL recebidas"
 #| "        This endpoint should be called by Hub9 when new messages are received to your number. You can set the receive URL on your Hub9 account by contacting your sales agent.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"                This endpoint should be called by Dart Media when new messages are received to your number.\n"
-"                You can set the receive URL on your Dart Media account by contacting your sales agent.\n"
-"                "
+msgid "This endpoint should be called by Dart Media when new messages are received to your number. You can set the receive URL on your Dart Media account by contacting your sales agent."
 msgstr ""
 "\n"
 "Esse terminal deve ser chamado pelo Hub9 quando o seu número receber novas mensagens. Você pode definir a URL de recebimento na sua conta do Hub9 contatando o seu agente de vendas"
@@ -1057,20 +976,13 @@ msgstr "URL entregues"
 #| "        You can set the delivery callback URL on your Infobip account by contacting your sales agent.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"                This endpoint should be called by Dart Media when a message has been to the final recipient. (delivery reports)\n"
-"                You can set the delivery callback URL on your Dart Media account by contacting your sales agent.\n"
-"                "
+msgid "This endpoint should be called by Dart Media when a message has been to the final recipient. (delivery reports) You can set the delivery callback URL on your Dart Media account by contacting your sales agent."
 msgstr ""
 "\n"
 "Esse terminal deve ser chamado pelo Hub9 quando uma mensagem foi para o destinatário final. (relatórios de entrega) Você pode definir a URL de entrega de retorno de chamada na sua conta Infobip entrando em contato com o seu agente de vendas."
 
 #, fuzzy
-msgid ""
-"If you are based in Uganda or DRC you can purchase a short\n"
-"    code from <a href=\"http://dmarkmobile.com/\">DMark Mobile</a> and connect it\n"
-"    in a few simple steps."
+msgid "If you are based in Uganda or DRC you can purchase a short code from <a href=\"http://dmarkmobile.com/\">DMark Mobile</a> and connect it in a few simple steps."
 msgstr ""
 "\n"
 "Se sua base estiver no Quênia, você pode comprar um número curto da %(link_start)s Africa's Talking %(link_end)s e\n"
@@ -1082,10 +994,7 @@ msgstr ""
 #| "        To finish configuring your Hub9 connection you'll need to provide them with the following details.\n"
 #| "\n"
 #| "      "
-msgid ""
-"\n"
-"        To finish configuring your DMark channel you need to set DMark to send MO messages to the URL below.\n"
-"        "
+msgid "To finish configuring your DMark channel you need to set DMark to send MO messages to the URL below."
 msgstr ""
 "\n"
 "Para finalizar a configuração da sua conexão com o Hub9, você terá que fornece-los com os seguintes detalhes."
@@ -11051,6 +10960,40 @@ msgstr "Insira o seu código de requisição"
 msgid "Found ${count} for ${query}"
 msgstr ""
 
+#, fuzzy
+#~| msgid ""
+#~| "\n"
+#~| "        You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on\n"
+#~| "        <a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\">Callback URL</a>.\n"
+#~| "\n"
+#~| "      "
+#~ msgid ""
+#~ "\n"
+#~ "                You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page,\n"
+#~ "                then clicking on Callback URL.\n"
+#~ "                "
+#~ msgstr ""
+#~ "\n"
+#~ "Você pode definir a URL de retorno de chamada em sua conta Africa's Talking, visitando a página do Painel de SMS e em seguida, clicando em \n"
+#~ "<a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\"> Callback URL </ a>. "
+
+#, fuzzy
+#~| msgid ""
+#~| "\n"
+#~| "        You can set the callback URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on\n"
+#~| "        <a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\">Callback URL</a>.\n"
+#~| "\n"
+#~| "      "
+#~ msgid ""
+#~ "\n"
+#~ "                You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page,\n"
+#~ "                then clicking on Delivery Reports.\n"
+#~ "                "
+#~ msgstr ""
+#~ "\n"
+#~ "Você pode definir a URL de retorno de chamada em sua conta Africa's Talking, visitando a página do Painel de SMS e em seguida, clicando em \n"
+#~ "<a href=\"http://www.africastalking.com/account/sms/smscallback\" target=\"africastalking\"> Callback URL </ a>. "
+
 #~ msgid "No org for this user, cannot claim"
 #~ msgstr "Nenhuma organização para este usuário, não pode requisitar"
 
@@ -14621,9 +14564,6 @@ msgstr ""
 
 #~ msgid "Username:"
 #~ msgstr "Nome do usuário:"
-
-#~ msgid "You can set the delivery URL on your Africa's Talking account by visiting the SMS Dashboard page, then clicking on"
-#~ msgstr "Você pode definir a URL de entrega para a sua conta da Africa's Talking, visitando a página Painel de SMS, em seguida, clicando em"
 
 #, fuzzy
 #~| msgid "Callback URL"
