--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-28 20:57+0000\n"
+"POT-Creation-Date: 2020-10-29 20:04+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -4859,6 +4859,10 @@ msgstr ""
 
 msgid "Russian"
 msgstr ""
+
+#, fuzzy
+msgid "Visually build nationally scalable mobile applications"
+msgstr "Cria Visualmente aplicações interativas através de SMS em qualquer lugar do mundo."
 
 #, fuzzy
 msgid "Visually build nationally scalable mobile applications from anywhere in the world."
