--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-28 20:57+0000\n"
+"POT-Creation-Date: 2020-10-29 20:04+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -4472,6 +4472,11 @@ msgstr "Испанский "
 
 msgid "Russian"
 msgstr "Русский"
+
+#, fuzzy
+#| msgid "Visually build nationally scalable mobile applications from anywhere in the world."
+msgid "Visually build nationally scalable mobile applications"
+msgstr "Наглядно создавайте масштабируемые на национальном уровне мобильные приложения из любой точки мира."
 
 msgid "Visually build nationally scalable mobile applications from anywhere in the world."
 msgstr "Наглядно создавайте масштабируемые на национальном уровне мобильные приложения из любой точки мира."
